# TCAssistant

tcassistant-api/: correcturls.txt  pyproject.toml  requirements.txt  retrieval.py  transform.xml
tcassistant-api/TCAssistat.egg-info/: PKG-INFO  SOURCES.txt
tcassistant-api/src/SOTI_TCAssistant_atjohn/: __init__.py  app.py  singleton.py
tcassistant-api/src/SOTI_TCAssistant_atjohn/RAG/: rag.py  rag2.py  sql_connection.py  vector_store.py
tcassistant-api/src/SOTI_TCAssistant_atjohn/apidocs/: chat.py  update_data.py  welcome.py
tcassistant-api/src/SOTI_TCAssistant_atjohn/faiss_index/: index.pkl
tcassistant-ui/: README.md  angular.json  package-lock.json  package.json
tcassistant-ui/src/: index.html
tcassistant-ui/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
tcassistant-ui/src/app/core/: llm.service.ts  scenario.service.ts  source.service.ts  storage.service.ts
tcassistant-ui/src/app/scenario/: scenario-routing.module.ts  scenario.module.ts
tcassistant-ui/src/app/scenario/saved-scenarios/: saved-scenarios.component.html  saved-scenarios.component.spec.ts  saved-scenarios.component.ts
tcassistant-ui/src/app/scenario/scenario-details/: scenario-details.component.css  scenario-details.component.html  scenario-details.component.spec.ts  scenario-details.component.ts
tcassistant-ui/src/app/scenario/scenario-input/: scenario-input.component.css  scenario-input.component.html  scenario-input.component.spec.ts  scenario-input.component.ts
(+4 files in other folders)
