[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "pkg/*.py",
  "/tests",
]
[project]
name = "SOTI_TCAssistant_atjohn"
version = "0.2.0"
authors = [
  { name="Athul John", email="athul.john@soti.net" },
]
description = "AI-powered test case creator for MobiControl."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
